--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-oauth2-refresh": "^2.0.1"
+    "passport-oauth2-refresh": "^2.0.1",
+    "redis": "^3.0.2"
   }
 }
