--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/firestore": "^4.9.1",
+    "@google-cloud/storage": "^5.8.3",
     "basic-auth": "^2.0.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
