--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-oauth2-refresh": "^2.0.1",
     "redis": "^3.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.25.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1"
   }
 }
